--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Welcome pxr to the cheese model quoting system V1#{title}
+  p Welcome pxr to the cheese model quoting system V1#{title} - initial UI v2
