--- a/views/index.html
+++ b/views/index.html
@@ -9,13 +9,14 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-file.js"></script>
-
+      <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-file.js"></script>
+ -->
       <link href="mdr-angular-file/dist/mdr-file.min.css">
       <script href="mdr-angular-file/dist/mdr-file.min.js"></script>
       <script href="./node_modules/fc/fc.js"></script>
       
     <script src='./javascripts/mainform.js' type="text/javascript"></script>
+    
 
     <style>
   #dropbox { 
@@ -65,116 +66,94 @@
         <div class="progress-bar" id="progress-bar">
           <div class="progress" id="progress"></div>
         </div>
-        <div id="gallery" />
+        <div id="gallery" >
+            <p><label id="lblCompVol">vol</label></p>
+            <p><label id="lblCompWeight">weight</label></p>
+
+            <p><label type="hidden" id="custId" name="custId" value="-1"></p>
+            </div>
       </div>
 
       <div ng-app="MainFormApp" ng-controller="mainFormCtrl">
         <!--firstController is the name of the controller function, its scope expands within this div element -->
-         <label> Enter stl file path
+         <label> Enter material
           <input type="text" name="stlfile" ng-model="modelData.stlpath" required>
         </label>
-        <button type="button" ng-click="onClick(modelData.stlpath)" >Upload STL</button>
+        <button type="button" ng-click="onClick(modelData.stlpath)" >Get Estimate</button>
         
         <p>{{modelData.stlpath}}</p>
       </div>
-   
-      
+
+      <script type="text/javascript" src="./javascripts/three.min.js"></script>
+      <script type="text/javascript" src="./javascripts/STLLoader.js"></script>
       <script>
-      const cloudName = 'Your cloud name';
-const unsignedUploadPreset = 'Your upload preset';
+      var camera, scene, renderer;
+  var geometry, material, mesh,startTime;
 
-var fileSelect = document.getElementById("fileSelect"),
-  fileElem = document.getElementById("fileElem");
+  init();
+  //animate();
 
-fileSelect.addEventListener("click", function(e) {
-  if (fileElem) {
-    fileElem.click();
+  function init() {
+    startTime = new Date().getTime();
+    camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.01, 10 );
+    camera.position.z = 1;
+
+    scene = new THREE.Scene();
+
+    //geometry = new THREE.BoxGeometry( 0.2, 0.2, 0.2 );
+    /* material = new THREE.MeshNormalMaterial();
+
+    mesh = new THREE.Mesh( geometry, material );
+    scene.add( mesh ); */
+
+
+
+    renderer = new THREE.WebGLRenderer( { antialias: true } );
+    renderer.setSize( window.innerWidth, window.innerHeight );
+    document.body.appendChild( renderer.domElement );
+    var loader = new THREE.STLLoader ();
+    loader.load ('./javascripts/Star.stl', function (geometry) {    
+                material = new THREE.MeshNormalMaterial();//new THREE.MeshPhongMaterial( { color: 'skyblue' } );
+                mesh = new THREE.Mesh( geometry, material );
+                console.log( mesh);
+
+                scene.add( mesh );
+                animate();
+
+            } );
+
+
+
   }
-  e.preventDefault(); // prevent navigation to "#"
-}, false);
 
-// ************************ Drag and drop ***************** //
-function dragenter(e) {
-  e.stopPropagation();
-  e.preventDefault();
-}
+  function animate() {
 
-function dragover(e) {
-  e.stopPropagation();
-  e.preventDefault();
-}
+    requestAnimationFrame( animate );
 
-dropbox = document.getElementById("dropbox");
-dropbox.addEventListener("dragenter", dragenter, false);
-dropbox.addEventListener("dragover", dragover, false);
-dropbox.addEventListener("drop", drop, false);
+    mesh.rotation.x += 0.01;
+    mesh.rotation.y += 0.02;
 
-function drop(e) {
-  e.stopPropagation();
-  e.preventDefault();
+    renderer.render( scene, camera );
 
-  var dt = e.dataTransfer;
-  var files = dt.files;
-
-  handleFiles(files);
-}
-
-// *********** Upload file to Cloudinary ******************** //
-function uploadFile(file) {
-  //var url = `https://api.cloudinary.com/v1_1/${cloudName}/upload`;
-
-  //var url = `http://localhost:3000/api/services/upload/`;//
-
-   var url = `http://localhost:3000/myfileupload/`;
-
-  var xhr = new XMLHttpRequest();
-  var fd = new FormData();
-  xhr.open('POST', url, true);
-  xhr.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
-
-  // Reset the upload progress bar
-   document.getElementById('progress').style.width = 0;
-  
-  // Update progress (can be used to show progress indicator)
-  xhr.upload.addEventListener("progress", function(e) {
-    var progress = Math.round((e.loaded * 100.0) / e.total);
-    document.getElementById('progress').style.width = progress + "%";
-
-    console.log(`fileuploadprogress data.loaded: ${e.loaded},
-  data.total: ${e.total}`);
-  });
-
-  xhr.onreadystatechange = function(e) {
-    if (xhr.readyState == 4 && xhr.status == 200) {
-      // File uploaded successfully
-      var response = JSON.parse(xhr.responseText);
-      // https://res.cloudinary.com/cloudName/image/upload/v1483481128/public_id.jpg
-      var url = response.secure_url;
-      // Create a thumbnail of the uploaded image, with 150px width
-      var tokens = url.split('/');
-      tokens.splice(-2, 0, 'w_150,c_scale');
-      var img = new Image(); // HTML5 Constructor
-      img.src = tokens.join('/');
-      img.alt = response.public_id;
-      document.getElementById('gallery').appendChild(img);
     }
-  };
-
-  fd.append('upload_preset', unsignedUploadPreset);
-  fd.append('tags', 'browser_upload'); // Optional - add tag for image admin in Cloudinary
-  fd.append('file', file);
-  xhr.send(fd);
-}
-
-// *********** Handle selected files ******************** //
-var handleFiles = function(files) {
-  for (var i = 0; i < files.length; i++) {
-    uploadFile(files[i]); // call the function to upload the file
+function computeScreenSpaceBoundingBox(mesh, camera) {
+  var vertices = mesh.geometry.vertices;
+  var vertex = new THREE.Vector3();
+  var min = new THREE.Vector3(1);
+  var max = new THREE.Vector3(-1);
+  
+  for (var i = 0; i < vertices.length; i++) {
+  	var vertexWorldCoord = vertex.copy(vertices[i]).applyMatrix4(mesh.matrixWorld);
+    var vertexScreenSpace = vertexWorldCoord.project(camera);
+  	min.min(vertexScreenSpace);
+    max.max(vertexScreenSpace);
   }
-};
-      </script>
-
- 
+  
+  return new THREE.Box2(min, max);
+}
+  </script>
+   
+      <script src='./javascripts/drag-drop.js' type="text/javascript"></script>
  
      </body>
 </html>
