--- a/views/index.html
+++ b/views/index.html
@@ -44,6 +44,9 @@
   background-color: #ff0000;
   width: 0;
 }
+body { margin: 0; }
+canvas { width: 50%; height: 50% }
+
     </style>
   </head>
     <body>
@@ -63,6 +66,7 @@
           </div>
         </form>
         </div>
+        <div id=viewContainer></div>
         <div class="progress-bar" id="progress-bar">
           <div class="progress" id="progress"></div>
         </div>
@@ -95,9 +99,21 @@
 
   function init() {
     startTime = new Date().getTime();
-    camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.01, 10 );
+    camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.01, 1000 );
     camera.position.z = 1;
 
+    // Find the document element that will host the canvas.
+var container = document.getElementById("viewContainer");
+
+/* // Add canvas to the document element.
+renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+renderer.setSize(targetWidth, targetHeight );
+renderer.setClearColor(0xededed, 0)
+container.appendChild(renderer.domElement);
+
+// Control for pan, zoom, rotate.
+controls = new THREE.TrackballControls(camera, container);
+ */
     scene = new THREE.Scene();
 
     //geometry = new THREE.BoxGeometry( 0.2, 0.2, 0.2 );
@@ -106,11 +122,11 @@
     mesh = new THREE.Mesh( geometry, material );
     scene.add( mesh ); */
 
-
-
     renderer = new THREE.WebGLRenderer( { antialias: true } );
-    renderer.setSize( window.innerWidth, window.innerHeight );
-    document.body.appendChild( renderer.domElement );
+    renderer.setSize( window.innerWidth/5, window.innerHeight/5 );
+    container.appendChild(renderer.domElement);
+
+    //document.body.appendChild( renderer.domElement );
     var loader = new THREE.STLLoader ();
     loader.load ('./javascripts/Star.stl', function (geometry) {    
                 material = new THREE.MeshNormalMaterial();//new THREE.MeshPhongMaterial( { color: 'skyblue' } );
