--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,11 @@
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+      <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+      <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+     <!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+ -->
       <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-file.js"></script>
  -->
       <link href="mdr-angular-file/dist/mdr-file.min.css">
@@ -47,36 +50,293 @@
 body { margin: 0; }
 canvas { width: 50%; height: 50% }
 
-    </style>
+
+.nav-side-menu {
+  overflow: auto;
+  font-family: verdana;
+  font-size: 12px;
+  font-weight: 200;
+  background-color: #2e353d;
+  position: fixed;
+  top: 0px;
+  width: 400px;
+  height: 100%;
+  color: #e1ffff;
+}
+.nav-side-menu .brand {
+  background-color: #23282e;
+  line-height: 50px;
+  display: block;
+  text-align: center;
+  font-size: 14px;
+}
+.nav-side-menu .toggle-btn {
+  display: none;
+}
+.nav-side-menu ul,
+.nav-side-menu li {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  line-height: 35px;
+  cursor: pointer;
+  /*    
+    .collapsed{
+       .arrow:before{
+                 font-family: FontAwesome;
+                 content: "\f053";
+                 display: inline-block;
+                 padding-left:10px;
+                 padding-right: 10px;
+                 vertical-align: middle;
+                 float:right;
+            }
+     }
+*/
+}
+.nav-side-menu ul :not(collapsed) .arrow:before,
+.nav-side-menu li :not(collapsed) .arrow:before {
+  font-family: FontAwesome;
+  content: "\f078";
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+  vertical-align: middle;
+  float: right;
+}
+.nav-side-menu ul .active,
+.nav-side-menu li .active {
+  border-left: 3px solid #d19b3d;
+  background-color: #4f5b69;
+}
+.nav-side-menu ul .sub-menu li.active,
+.nav-side-menu li .sub-menu li.active {
+  color: #d19b3d;
+}
+.nav-side-menu ul .sub-menu li.active a,
+.nav-side-menu li .sub-menu li.active a {
+  color: #d19b3d;
+}
+.nav-side-menu ul .sub-menu li,
+.nav-side-menu li .sub-menu li {
+  background-color: #181c20;
+  border: none;
+  line-height: 28px;
+  border-bottom: 1px solid #23282e;
+  margin-left: 0px;
+}
+.nav-side-menu ul .sub-menu li:hover,
+.nav-side-menu li .sub-menu li:hover {
+  background-color: #020203;
+}
+.nav-side-menu ul .sub-menu li:before,
+.nav-side-menu li .sub-menu li:before {
+  font-family: FontAwesome;
+  content: "\f105";
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+  vertical-align: middle;
+}
+.nav-side-menu li {
+  padding-left: 0px;
+  border-left: 3px solid #2e353d;
+  border-bottom: 1px solid #23282e;
+}
+.nav-side-menu li a {
+  text-decoration: none;
+  color: #e1ffff;
+}
+.nav-side-menu li a i {
+  padding-left: 10px;
+  width: 20px;
+  padding-right: 20px;
+}
+.nav-side-menu li:hover {
+  border-left: 3px solid #d19b3d;
+  background-color: #4f5b69;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
+}
+@media (max-width: 767px) {
+  .nav-side-menu {
+    position: relative;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .nav-side-menu .toggle-btn {
+    display: block;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    z-index: 10 !important;
+    padding: 3px;
+    background-color: #ffffff;
+    color: #000;
+    width: 40px;
+    text-align: center;
+  }
+  .brand {
+    text-align: left !important;
+    font-size: 22px;
+    padding-left: 20px;
+    line-height: 50px !important;
+  }
+}
+@media (min-width: 767px) {
+  .nav-side-menu .menu-list .menu-content {
+    display: block;
+  }
+}
+
+</style>
   </head>
     <body>
-      
-      <div id="dropbox">
-        <h1>Upload your stl file into this dashed area</h1> 
-        <div></div><!--TODO - investigate why form includes other elements with out this-->
-        <form class="my-form">
-          <div class="form_line">
-            <h4>To upload multiple files with the file dialog use this link</h4>
-            <div class="form_controls">
-              <div class="upload_button_holder">
-                <input type="file" id="fileElem" multiple accept="image/*" style="display:none" onchange="handleFiles(this.files)">
-                <a href="#" id="fileSelect">Upload using file browser</a>
-              </div>
-            </div>
-          </div>
-        </form>
-        </div>
-        <div id=viewContainer></div>
-        <div class="progress-bar" id="progress-bar">
-          <div class="progress" id="progress"></div>
-        </div>
-        <div id="gallery" >
-            <p><label id="lblCompVol">vol</label></p>
-            <p><label id="lblCompWeight">weight</label></p>
 
-            <p><label type="hidden" id="custId" name="custId" value="-1"></p>
-            </div>
-      </div>
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+<div class="nav-side-menu">
+    <!-- https://bootsnipp.com/snippets/o1Kjd -->
+    <div class="brand">Cheese Sauce</div>
+    <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+  
+        <div class="menu-list">
+  
+            <ul id="menu-content" class="menu-content collapse out">
+                <li>
+                  <a href="#">
+                  <i class="fa fa-star fa-lg"></i> Home
+                  </a>
+                </li>
+
+                <li  data-toggle="collapse" data-target="#about" class="collapsed">
+                  <a href="#"><i class="fa fa-star fa-lg"></i> About Us <span class="arrow"></span></a>
+                </li>
+                <ul class="sub-menu collapse" id="about">
+                    <li class="active"><a href="#">Directors</a></li>
+                    <li><a href="#">Our Vision</a></li>
+                    <li><a href="#">History</a></li>
+                    <li><a href="#">Corporate Governance</a></li>
+                    <li><a href="#">Key Advisors</a></li>
+                </ul>
+                
+                <li  data-toggle="collapse" data-target="#upload" class="collapsed">
+                  <a href="#"><i class="fa fa-star fa-lg"></i> Up Load a component <span class="arrow"></span></a>
+                </li>
+                <ul class="sub-menu collapse" id="upload">
+                   
+                    <li><div id="dropbox">
+                        <h3>Upload your stl file into this dashed area</h3> 
+                        <div></div><!--TODO - investigate why form includes other elements with out this-->
+                        <form class="my-form">
+                          <div class="form_line">
+                            <h5>To upload multiple files with the file dialog use this link</h5>
+                            <div class="form_controls">
+                              <div class="upload_button_holder">
+                                <input type="file" id="fileElem" multiple accept="image/*" style="display:none" onchange="handleFiles(this.files)">
+                                <a href="#" id="fileSelect">Upload using file browser</a>
+                              </div>
+                            </div>
+                          </div>
+                        </form>
+                        </div>
+                        <div id=viewContainer></div>
+                        <div class="progress-bar" id="progress-bar">
+                          <div class="progress" id="progress"></div>
+                        </div>
+                        <div id="gallery" >
+                            <p><label id="lblCompVol">vol</label></p>
+                            <p><label id="lblCompWeight">weight</label></p>
+                
+                            <p><label type="hidden" id="custId" name="custId" value="-1"></p>
+                            </div>
+                      </li>
+                    
+                </ul>
+                
+               
+                <li  data-toggle="collapse" data-target="#quote" class="collapsed">
+                    <a href="#"><i class="fa fa-star fa-lg"></i> Get a Quote <span class="arrow"></span></a>
+                  </li>
+                <ul class="sub-menu collapse" id="quote">
+                      <li> <div ng-app="MainFormApp" ng-controller="mainFormCtrl">
+                          <!--firstController is the name of the controller function, its scope expands within this div element -->
+                           <label> Enter material
+                            <input type="text" name="stlfile" ng-model="modelData.stlpath" required>
+                          </label>
+                          <button type="button" ng-click="onClick(modelData.stlpath)" >Get Estimate</button>
+                          
+                          <p>{{modelData.stlpath}}</p>
+                        </div></a></li>
+                    
+                </ul>
+                
+                <li  data-toggle="collapse" data-target="#projects" class="collapsed active">
+                  <a href="#"><i class="fa fa-star fa-lg"></i>Your Projects <span class="arrow"></span></a>
+                </li>
+                <ul class="sub-menu collapse" id="projects">
+                    
+                    <li  data-toggle="collapse" data-target="#nevada" class="collapsed active">
+                      <a href="#">Hair driers<span class="arrow"></span></a>
+                    </li>
+                    <ul class="sub-menu collapse" id="nevada">
+                        <li><a href="#">   Braun</a></li>
+                        <li><a href="#">   Full Stand</a></li>
+                        <li><a href="#">   Compact</a></li>
+
+                        <li  data-toggle="collapse" data-target="#pozz" class="collapsed active">
+                            <a href="#">  <span class="arrow"></span></a>
+                        </li>
+                        <ul class="sub-menu collapse" id="pozz">
+                            <li><a href="#">     OVERVIEW</a></li>
+                            <li><a href="#">     CS DEPOSIT</a></li>
+                            <li><a href="#">     POZZ ASH DEPOSIT</a></li>
+                        </ul>
+                        
+                        <li><a href="#">   NEWARK PROJECT</a></li>
+                        <li><a href="#">   CLAYTON PROJECT</a></li>
+                    </ul>
+                    
+                    <li  data-toggle="collapse" data-target="#australia" class="collapsed active">
+                      <a href="#">Model Cars<span class="arrow"></span></a>
+                    </li>
+                    <ul class="sub-menu collapse" id="australia">
+                        <li><a href="#">   ...</a></li>
+                        <li><a href="#">   ...</a></li>
+                        <li><a href="#">   ...</a></li>
+                    </ul>
+                    
+                    <li  data-toggle="collapse" data-target="#ireland" class="collapsed active">
+                      <a href="#">Portable Speakers<span class="arrow"></span></a>
+                    </li>
+                    <ul class="sub-menu collapse" id="ireland">
+                        <li><a href="#">...</a></li>
+                        <li><a href="#">...</a></li>
+                        <li><a href="#">...</a></li>
+                    </ul>
+                    
+                </ul>
+                
+                <li  data-toggle="collapse" data-target="#contact" class="collapsed">
+                  <a href="#"><i class="fa fa-star fa-lg"></i> Contact <span class="arrow"></span></a>
+                </li>
+                <ul class="sub-menu collapse" id="contact">
+                    <li class="active"><a href="#">...</a></li>
+                    <li><a href="#">...</a></li>
+                    <li><a href="#">...</a></li>
+                </ul>
+
+            
+            </ul>
+
+     </div>
+</div>
+      
+      
 
       <div ng-app="MainFormApp" ng-controller="mainFormCtrl">
         <!--firstController is the name of the controller function, its scope expands within this div element -->
@@ -92,7 +352,7 @@ canvas { width: 50%; height: 50% }
       <script type="text/javascript" src="./javascripts/STLLoader.js"></script>
       <script>
       var camera, scene, renderer;
-  var geometry, material, mesh,startTime;
+  var geometry, material, mesh,startTime,controls;
 
   init();
   //animate();
@@ -109,11 +369,15 @@ var container = document.getElementById("viewContainer");
 renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
 renderer.setSize(targetWidth, targetHeight );
 renderer.setClearColor(0xededed, 0)
-container.appendChild(renderer.domElement);
+container.appendChild(renderer.domElement);*/
 
 // Control for pan, zoom, rotate.
-controls = new THREE.TrackballControls(camera, container);
- */
+/* controls = new THREE.TrackballControls(camera, container);
+camera.position.set( 0, 20, 100 );
+controls.update(); */
+
+
+ 
     scene = new THREE.Scene();
 
     //geometry = new THREE.BoxGeometry( 0.2, 0.2, 0.2 );
