remove temp stls

--- a/views/index.html
+++ b/views/index.html
@@ -355,7 +355,7 @@ canvas { width: 50%; height: 50% }
       var camera, scene, renderer;
   var geometry, material, mesh,startTime,controls;
 
-  init();
+  //init();
   //animate();
 
   function init() {
