--- a/views/index.html
+++ b/views/index.html
@@ -237,7 +237,7 @@ canvas { width: 50%; height: 50% }
                             <h5>To upload multiple files with the file dialog use this link</h5>
                             <div class="form_controls">
                               <div class="upload_button_holder">
-                                <input type="file" id="fileElem" multiple accept="image/*" style="display:none" onchange="handleFiles(this.files)">
+                                <input type="file" id="fileElem" multiple accept="/*" style="display:none" onchange="handleFiles(this.files)">
                                 <a href="#" id="fileSelect">Upload using file browser</a>
                               </div>
                             </div>
